--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Portfolio Site</title>
+    
 </head>
 
 <body> 
@@ -26,9 +27,22 @@
             <img src="images/v_icon.png" alt="Vimeo icon">
         </nav>
         <div class="hamburger">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
+        <div class="mobileNav">
+            <a href="#Work">Work</a>
+            <a href="#Contact">Contact</a>
+            <a href="#">
+                <img src="images/dribble_icon.png" alt="basketball icon">
+            </a>
+            <a href="#">
+                <img src="images/insta_icon.png" alt="instagram icon">
+            </a>
+            <a href="#">
+                <img src="images/v_icon.png" alt="Vimeo icon">
+            </a>
         </div>
     </header>
     <div class="project-grid">
@@ -72,6 +86,7 @@
     <footer class="footer">
         <p>Projects made by Patrick Star from Bikini Bottom.</p>
     </footer>
+    <script src="index.js"></script>
 </body>
 
 </html>
